--- a/package.json
+++ b/package.json
@@ -20,30 +20,33 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "styled-components": "^3.2.6",
     "styled-system": "^2.2.5",
-    "styled-tools": "^0.5.0",
-    "uigradients": "^0.2.1"
+    "styled-tools": "^0.5.0"
   },
   "peerDependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
+    "@storybook/addon-actions": "^3.4.3",
     "@storybook/addon-backgrounds": "^3.4.3",
     "@storybook/addon-centered": "^3.4.3",
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "@storybook/storybook-deployer": "^2.3.0",
+    "babel-core": "^7.0.0-0",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-styled-components": "^1.5.1",
     "cross-env": "^5.1.5",
     "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-yoctol": "^0.16.1",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -54,6 +57,7 @@
     "prettier": "^1.12.1",
     "prettier-package-json": "^1.6.0",
     "rimraf": "^2.6.2",
+    "styled-normalize": "^4.0.0",
     "stylelint": "9.1.3",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-yoctol": "^0.8.0",
