Add some utils functions and @storybook/addon-knobs

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@storybook/addon-actions": "^3.4.3",
     "@storybook/addon-backgrounds": "^3.4.3",
     "@storybook/addon-centered": "^3.4.3",
+    "@storybook/addon-knobs": "^3.4.3",
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "@storybook/storybook-deployer": "^2.3.0",
