--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "styled-tools": "^0.5.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
+    "react": "^16.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
