--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-linear-gradient-button",
-  "description": "React linear gradient button component",
+  "description": "React linear gradient button component.",
   "license": "MIT",
   "author": "xxhomey19",
   "version": "0.0.1",
