Add some babel production plugins

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.46",
+    "@babel/plugin-transform-react-inline-elements": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
     "@storybook/addon-backgrounds": "^3.4.3",
