--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "lint:fix": "npm run lint -- --fix",
     "lint:staged": "lint-staged",
     "prepublish": "npm run build",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "test": "npm run lint:fix && npm run testonly",
+    "testonly": "jest",
+    "testonly:cov": "jest --coverage --runInBand --forceExit",
+    "testonly:watch": "jest --watch",
+    "preversion": "npm test"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
@@ -45,6 +50,7 @@
     "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
     "babel-plugin-styled-components": "^1.5.1",
     "cross-env": "^5.1.5",
     "eslint": "^4.19.1",
@@ -55,15 +61,29 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.14.3",
+    "jest": "^22.4.3",
     "lint-staged": "^7.1.0",
     "prettier": "^1.12.1",
     "prettier-package-json": "^1.6.0",
+    "react-test-renderer": "^16.3.2",
     "rimraf": "^2.6.2",
     "styled-normalize": "^4.0.0",
     "stylelint": "9.1.3",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-yoctol": "^0.8.0",
     "stylelint-processor-styled-components": "^1.3.1"
+  },
+  "keywords": [
+    "button",
+    "component",
+    "gradient",
+    "linear-gradient",
+    "react",
+    "react-component"
+  ],
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.js", "!src/**/__stories__/*"],
+    "testPathIgnorePatterns": ["/node_modules/", "<rootDir>/lib"]
   },
   "lint-staged": {
     "*.js": ["eslint --fix", "npm run lint:css", "git add"],
