--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/xxhomey19/react-linear-gradient-button/issues"
   },
   "version": "1.0.1",
-  "main": "index.js",
+  "main": "lib/index.js",
   "files": ["lib"],
   "scripts": {
     "build":
