--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["babel-plugin-styled-components"],
+  "plugins": ["babel-plugin-styled-components", "ramda"],
   "env": {
     "production": {
       "plugins": [
