--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-transform-react-inline-elements": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
+    "@storybook/addon-actions": "^3.4.5",
     "@storybook/addon-backgrounds": "^3.4.3",
     "@storybook/addon-centered": "^3.4.3",
     "@storybook/addon-knobs": "^3.4.3",
